Feat: Complete Login and Gitlab config pages.
